styles/style.css
header{
  /*background-color: white;*/
  padding: 1em;
  margin: 1em;
  text-align: center;
}
footer{
  padding: 1em;
  margin: 1em;
  text-align: center;
}

form{
  padding: 2em;
  /*margin: 1em;*/
}
main{
  clear: both;
}
.inline{
  display: inline;
  padding: 1em;
  /*need to move these*/
  text-align: center;
  font-size: 2em;
}

nav a{
  margin: 2em;
}

article{
  background-color: white;
  border: 1px solid;
  padding: 1em;
  margin: 1em;
}

body{
  background-color: #6B1F30;
  padding: 1em;
  margin: 1em;
}

img{
  /*width: 5em;*/
  max-height: 15%;
  /*height: 5em;*/
  display: block;
  align: left;
  /*clear: left;*/
  margin: 1em;
}

.blogTitle{
  clear: left;
}

#aboutMeArticle{
  /*background-color: white;*/
  padding: 1em;
}
.bg-White{
  background-color: white;
}
.postProps{
  visibility: hidden;
}

.display-none{
  display: none;
}

